Finish wish Styling and Structure

--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -5,8 +5,8 @@
   </p>
 
   <p>
-    <strong>Description:</strong>
-    <%= project.description %>
+    <strong>Desc:</strong>
+    <%= project.desc %>
   </p>
 
 </div>
