--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_with(model: project) do |form| %>
-  <% if project.errors.any? %>
+<%= form_with(model: @project) do |form| %>
+  <% if @project.errors.any? %>
     <div style="color: red">
-      <h2><%= pluralize(project.errors.count, "error") %> prohibited this project from being saved:</h2>
+      <h2><%= pluralize(@project.errors.count, "error") %> prohibited this project from being saved:</h2>
 
       <ul>
-        <% project.errors.each do |error| %>
+        <% @project.errors.each do |error| %>
           <li><%= error.full_message %></li>
         <% end %>
       </ul>
@@ -20,6 +20,13 @@
     <%= form.label :description, style: "display: block" %>
     <%= form.text_area :description %>
   </div>
+
+  <%= form.fields_for :tasks, @project.tasks.build do |task_form| %>
+    <div class="mb-3">
+      <%= task_form.label :content, class: "form-label" %>
+      <%= task_form.text_area :content, placeholder: "New Task", required: true, class: "form-control" %>
+    </div>
+  <% end %>
 
   <div>
     <%= form.submit %>
